Update website content, forms, and contact details as requested

--- a/about.html
+++ b/about.html
@@ -37,17 +37,20 @@
   <div class="grid-2">
     <div class="card">
       <h3>Our Vision</h3>
-      <p>To be a leading primary school in Lagos known for outstanding teaching, character formation and innovation.</p>
+      <p>Our vision is to be at the frontline of inspiring and nurturing wholesome pupils to become productive global first class citizens</p>
       <h3>Our Mission</h3>
-      <p>To provide high‑quality, child‑centered education that equips learners to excel academically and thrive socially.</p>
+  <p>Our mission is total dedication to continuous and never ending improvement by delivering qualitative education in an inspiring and nurturing environment that enables the development of pupils for a life of productive services.</p>
     </div>
     <div class="card">
       <h3>Core Values</h3>
       <ul>
-        <li>Integrity & Respect</li>
-        <li>Curiosity & Creativity</li>
-        <li>Excellence & Discipline</li>
-        <li>Teamwork & Service</li>
+        <li>Discipline</li>
+        <li>Empathy</li>
+        <li>Creativity</li>
+        <li>Life-long learning</li>
+        <li>Integrity</li>
+        <li>Responsibility</li>
+        <li>Excellence</li>
       </ul>
     </div>
   </div>
@@ -64,22 +67,9 @@
           <p>Admissions, finance and parent relations.</p>
         </div>
         <div class="card" style="width:100%;">
-      <h3>Staffs</h3>
-      <p>Leads academics and whole‑school improvement.</p>
-      <div class="staff-gallery" style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.2rem;">
-            <img src="assets/images/_DSC7087.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7091.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7094.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7096.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7097.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7099.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7102.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7103.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7105.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7110.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7115.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-            <img src="assets/images/_DSC7118.jpg" alt="Staff Group" style="width:100%;border-radius:8px;" />
-          </div>
+  <h3>Staffs</h3>
+  <p>Leads academics and whole‑school improvement.</p>
+  <img src="assets/images/_DSC7087.jpg" alt="Staff Group" style="width:100%;max-width:350px;border-radius:12px;margin-bottom:12px;" />
         </div>
       </div>
     </div>
@@ -118,7 +108,7 @@
         <ul>
           <li>Tel: 0818‑890‑2673</li>
           <li>Tel: 0803‑714‑4152</li>
-          <li>Email: info@itainbellschools.com</li>
+          <li>Email: Itainbell.schools@gmail.com</li>
         </ul>
       </div>
     </div>
