--- a/academics.html
+++ b/academics.html
@@ -56,6 +56,7 @@
   </div>
 </section>
 
+
 <section class="section">
   <span class="kicker">Assessment</span>
   <h2>Continuous & Holistic</h2>
@@ -98,7 +99,7 @@
         <ul>
           <li>Tel: 0818‑890‑2673</li>
           <li>Tel: 0803‑714‑4152</li>
-          <li>Email: info@itainbellschools.com</li>
+          <li>Email: Itainbell.schools@gmail.com</li>
         </ul>
       </div>
     </div>
