--- a/facilities.html
+++ b/facilities.html
@@ -35,12 +35,11 @@
   <span class="kicker">Campus</span>
   <h2>Safe, Stimulating Learning Spaces</h2>
   <div class="grid-3">
-    <div class="card"><h3>ICT Centre</h3><p>Early exposure to technology and coding.</p></div>
-    <div class="card"><h3>Library</h3><p>Reading culture nurtured with diverse books.</p></div>
+    <div class="card"><h3>Resource Centre</h3><p>Early exposure to technology and coding.</p></div>
+    <div class="card"><h3>Library/ICT</h3><p>Reading culture nurtured with diverse books.</p></div>
     <div class="card"><h3>Sports & Play</h3><p>Outdoor spaces for physical development.</p></div>
-    <div class="card"><h3>Sick Bay</h3><p>On‑site first aid and child wellness.</p></div>
+    <div class="card"><h3>Healing Bay</h3><p>On‑site first aid and child wellness.</p></div>
     <div class="card"><h3>School Bus</h3><p>Reliable pick‑up and drop‑off routes.</p></div>
-    <div class="card"><h3>Cafeteria</h3><p>Nutritious snacks and lunch options.</p></div>
   </div>
 </section>
 
@@ -89,7 +88,7 @@
         <ul>
           <li>Tel: 0818‑890‑2673</li>
           <li>Tel: 0803‑714‑4152</li>
-          <li>Email: info@itainbellschools.com</li>
+          <li>Email: Itainbell.schools@gmail.com</li>
         </ul>
       </div>
     </div>
