--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="hero">
   <div>
     <span class="badge">Welcome to Itain‑Bell Schools</span>
-    <h1>Nurturing confident, curious learners for a bright future.</h1>
+    <h1>A culture of constant and never ending improvement.</h1>
     <p>We provide a safe, happy environment where every child builds strong academic foundations and essential life skills.</p>
     <div style="display:flex;gap:.6rem;margin-top:1rem">
       <a class="btn" href="admissions.html">Apply Now</a>
@@ -42,13 +42,13 @@
     </div>
 
     <div class="stats">
-      <div class="stat"><h3>10:1</h3><p>Pupil‑Teacher Ratio</p></div>
       <div class="stat"><h3>25+</h3><p>Clubs & Activities</p></div>
-      <div class="stat"><h3>100%</h3><p>Common Entrance Readiness</p></div>
       <div class="stat"><h3>8/2/2010</h3><p>Year Established</p></div>
     </div>
   </div>
-  <div class="hero-img">School Image</div>
+  <div class="hero-img">
+    <img src="assets/images/images.jpeg" alt="Itain‑Bell Schools" style="width:100%;height:auto;object-fit:cover;" />
+  </div>
 </section>
 
 <section class="cards">
@@ -56,6 +56,19 @@
     <span class="kicker">Montessori Roots</span>
     <h3>Early Years that Inspire</h3>
     <p>Play‑based learning that develops social, emotional and cognitive skills.</p>
+  </article>
+  <article class="card">
+    <span class="kicker">Child to Adult Ratio</span>
+    <h3>Personalized Care & Safety</h3>
+    <ul style="margin:0 0 .6em 1.2em;padding:0;font-size:.98em;">
+      <li><strong>Age 3 - 12+ months:</strong> 3 children to 1 adult</li>
+      <li><strong>Ages 18 - 24+ months:</strong> 6 children to 1 adult</li>
+      <li><strong>Ages 2+ to 3+ years:</strong> 6 children to 1 adult</li>
+      <li><strong>Ages 3+ to 4+ years:</strong> 8 children to 1 adult</li>
+      <li><strong>Ages 5+ to 6+ years:</strong> 8 children to 1 adult</li>
+      <li><strong>Ages 6+ upwards:</strong> 10 children to 1 adult</li>
+    </ul>
+    <p style="color:#6b7280;font-size:.97em;">Subject to the children learning needs, developmental challenges and any other unforeseen issues.</p>
   </article>
   <article class="card">
     <span class="kicker">British–Nigerian</span>
@@ -107,7 +120,7 @@
         <ul>
           <li>Tel: 0818‑890‑2673</li>
           <li>Tel: 0803‑714‑4152</li>
-          <li>Email: info@itainbellschools.com</li>
+          <li>Email: Itainbell.schools@gmail.com</li>
         </ul>
       </div>
     </div>
