--- a/news.html
+++ b/news.html
@@ -96,7 +96,7 @@
         <ul>
           <li>Tel: 0818‑890‑2673</li>
           <li>Tel: 0803‑714‑4152</li>
-          <li>Email: info@itainbellschools.com</li>
+          <li>Email: Itainbell.schools@gmail.com</li>
         </ul>
       </div>
     </div>
