User requested push: update website

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="hero">
   <div>
     <span class="badge">Welcome to Itain‑Bell Schools</span>
-    <h1>A culture of constant and never ending improvement.</h1>
+    <h1>Getting better every day in every way.</h1>
     <p>We provide a safe, happy environment where every child builds strong academic foundations and essential life skills.</p>
     <div style="display:flex;gap:.6rem;margin-top:1rem">
       <a class="btn" href="admissions.html">Apply Now</a>
