Update facilities: expand extra-curricular activities

--- a/facilities.html
+++ b/facilities.html
@@ -46,13 +46,25 @@
 <section class="section">
   <span class="kicker">Beyond Classrooms</span>
   <h2>Clubs & Extra‑Curricular</h2>
-  <div class="grid-3">
-    <div class="card"><h3>STEAM & Coding</h3><p>Hands‑on projects and problem solving.</p></div>
-    <div class="card"><h3>Music & Drama</h3><p>Confidence through performance.</p></div>
-    <div class="card"><h3>Languages</h3><p>French and Nigerian languages.</p></div>
-    <div class="card"><h3>Sports</h3><p>Taekwondo, swimming, football, ballet.</p></div>
-    <div class="card"><h3>Debate & Spelling</h3><p>Critical thinking and literacy.</p></div>
-    <div class="card"><h3>Entrepreneurship</h3><p>Creativity, leadership and teamwork.</p></div>
+  <!-- Primary clubs replaced by expanded extracurricular activities below -->
+  <div style="margin-top:1.2rem">
+    <h3>Extra curricular activities</h3>
+    <div class="grid-3" style="margin-top:.8rem">
+      <div class="card"><h3>Cub Scout</h3><p>Leadership and outdoor skills.</p></div>
+      <div class="card"><h3>Red Cross</h3><p>First aid and community service.</p></div>
+      <div class="card"><h3>Ballet</h3><p>Dance and movement.</p></div>
+      <div class="card"><h3>Music</h3><p>Instrumental and vocal training.</p></div>
+      <div class="card"><h3>Brownie</h3><p>Young girls' leadership and skills.</p></div>
+      <div class="card"><h3>Swimming</h3><p>Water safety and fitness.</p></div>
+      <div class="card"><h3>Taekwondo</h3><p>Martial arts and discipline.</p></div>
+      <div class="card"><h3>Chess Club</h3><p>Strategic thinking and competition.</p></div>
+      <div class="card"><h3>Chef Club</h3><p>Cooking and nutrition basics.</p></div>
+      <div class="card"><h3>Art Club</h3><p>Creative expression and visual arts.</p></div>
+      <div class="card"><h3>The Gavel Club</h3><p>Public speaking and leadership.</p></div>
+      <div class="card"><h3>Mathematics Club</h3><p>Problem solving & math challenges.</p></div>
+      <div class="card"><h3>Creative Writing Club</h3><p>Storytelling and composition.</p></div>
+      <div class="card"><h3>Science Explorers Club</h3><p>Hands-on experiments and inquiry.</p></div>
+    </div>
   </div>
 </section>
 
